src/test/deca/context/invalid/pierre/objects/thisInMain.deca
class A {
    void method(){}
}
{
    A a = new A();
    this.method();
}